new file:   Javascript/dom.html 	modified:   Javascript/frist.html 	new file:   Javascript/string_con.html

--- a/Javascript/string_con.html
+++ b/Javascript/string_con.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <script>
-       var name;
-       name="shubham";
-       alert(name);
+        var x=" hello";
+        var y=" Shubham";
+        var z=x+y;
+        document.write(z);
+        var k=z+" Gavade"
+        document.write(k);
     </script>
 </body>
 </html>
